# ai-powered-todo-app

./: .env.example  .gitignore  PRD.md  README.md  docker-compose.yml  init.sql  verify-setup.sh
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  globals.css  index.tsx
frontend/src/components/AIAssistant/: AIAssistant.tsx
frontend/src/components/TodoForm/: TodoForm.tsx
frontend/src/components/TodoItem/: TodoItem.tsx
frontend/src/components/TodoList/: TodoList.tsx
frontend/src/components/ui/: button.tsx
frontend/src/hooks/: useAI.ts  useDebounce.ts  useTodos.ts
frontend/src/services/: aiService.ts  api.ts  todoService.ts
frontend/src/styles/: brand-guidelines.md  color-system.md
frontend/src/types/: index.ts
frontend/src/utils/: accessibility-validator.ts  color-migration.ts
nginx/: nginx.conf
services/ai/: Dockerfile  pyproject.toml
services/ai/app/: __init__.py  agents.py  langraph_workflow.py  main.py  prompts_backup.py
services/ai/app/prompts/: __init__.py  batch_analysis.py  categorization.py  priority_analysis.py  time_estimation.py  todo_parsing.py
services/todo/: Dockerfile  pyproject.toml
services/todo/app/: __init__.py  crud.py  database.py  main.py  models.py  schemas.py
