[project]
name = "todo-service"
version = "0.1.0"
description = "AI 기반 할 일 목록 애플리케이션을 위한 할 일 마이크로서비스"
requires-python = ">=3.13"

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.23",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "redis>=5.0.1",
    "python-multipart>=0.0.6",
    "alembic>=1.12.1",
    "python-dotenv>=1.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "httpx==0.25.2",
    "black==23.11.0",
    "ruff==0.1.6",
]